[package]
name = "whoami"
version = "0.1.0"
edition = "2021"
authors = ["John <jnelson11@gmail.com>"]
description = "Minimal lightweight HTTP service that returns client information"
license = "MIT"

[dependencies]
hyper = { version = "1.5", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
http-body-util = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
strip = true         # Strip symbols
panic = "abort"      # Smaller panic handler
